--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .harlemShakeButton{
   padding:5px 12px;
   float:right;
 }
@@ -24,4 +24,15 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+img {
+  position: absolute;
+}
+
+.regularShawn{
+  position: relative;
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;  
 }
